--- a/HomeWork1.html
+++ b/HomeWork1.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <h1>Программная инженерияОООО</h1>
-    <h2>Веб-программирование</h2>
+    <h2>Веб-программированиеБУБУБУБ</h2>
     <h3>Расширение в Visual Studio Code</h3>
 <p><b>Visual Studio Code</b>, пожалуй, лучший редактор кода, который можно использовать в настоящее время. 
     <em>Благодаря широкому спектру расширений и поддержке Microsoft</em> этот редактор получил <u>Широкое распространение.</u></p>
